--- a/app/views/bulk_discounts/index.html.erb
+++ b/app/views/bulk_discounts/index.html.erb
@@ -15,11 +15,13 @@
     <p class='mr-auto col-sm-5'>All my Discounts</p>
   </div>
 
+  <%= link_to 'Create New Discount', new_merchant_bulk_discount_path(@merchant.id) %>
+
   <ul class='ml-auto col-sm-4'>
     <section id = "all_discounts" >
       <p><% @discounts.each do |discount| %>
         <li>Title: <%= link_to "#{discount.title}", "/merchant/#{@merchant.id}/bulk_discounts/#{discount.id}" %>
-        <p>Percentage Discount: <%= discount.percentage_discount * 100 %>%</p>
+        <p>Percentage Discount: <%= (discount.percentage_discount * 100).to_i %>%</p>
         <p>Quantity Threshold: <%= discount.quantity_threshold %> items</p></li>
       <% end %>
       </p>
