--- a/app/views/bulk_discounts/new.html.erb
+++ b/app/views/bulk_discounts/new.html.erb
@@ -1,4 +1,8 @@
-<%= form_with model: [:merchant, @discount], local: true do |f| %>
+<%= render partial: 'bulk_discounts_nav', locals: {merchant: @merchant} %>
+
+<h3>New Discount</h3>
+
+<%= form_with model: [@merchant, @discount], local: true do |f| %>
   <%= f.label :title, 'Title' %>
   <%= f.text_field :title %><br/><br/>
   <%= f.label :percentage_discount, 'Percentage Discount' %>
