--- a/app/views/bulk_discounts/show.html.erb
+++ b/app/views/bulk_discounts/show.html.erb
@@ -1,6 +1,10 @@
 <%= render partial: 'bulk_discounts_nav', locals: {merchant: @merchant} %>
 
-<h3>Bulk Discount #<%= @discount.id %><h3>
-<p><strong>Title:</strong> <%= @discount.title %></p>
-<p><strong>Quantity Threshold:</strong> <%= @discount.quantity_threshold %> items</p>
-<p><strong>Percentage Discount:</strong> <%= @discount.percentage_discount %>%</p>
+<div id = "discount_info">
+  <h3>Bulk Discount #<%= @discount.id %><h3>
+  <p><strong>Title:</strong> <%= @discount.title %></p>
+  <p><strong>Quantity Threshold:</strong> <%= @discount.quantity_threshold %> items</p>
+  <p><strong>Percentage Discount:</strong> <%= @discount.percentage_discount.to_i %>%</p>
+</div>
+
+<%= link_to "Edit this bulk discount", edit_merchant_bulk_discount_path(@merchant.id, @discount.id) %>
