Add Upcoming Holidays to the bottom of the merchant bulk discounts index

--- a/app/views/bulk_discounts/index.html.erb
+++ b/app/views/bulk_discounts/index.html.erb
@@ -20,3 +20,8 @@
     </section>
   </ul>
 </body>
+
+<h3>Upcoming Holidays</h3>
+<p><% @holidays.each do |holiday| %></p>
+  <%= holiday.name %>, <%= holiday.date %>
+<% end %>
