--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -22,8 +22,7 @@
   <p> Created on: <%= @invoice.created_at.strftime("%A, %B %-d, %Y") %></p>
   <p>Total Revenue: <%= @invoice.total_revenue %></p>
   <p>Total Revenue for <%= @merchant.name %>: <%= @merchant.merchant_total_revenue(@invoice) %></p>
-  <p>Total Revenue for <%= @merchant.name %> after discounts: <%=  @merchant.merchant_total_revenue(@invoice) - @merchant.merchant_discounts(@invoice) %></p>
-
+  <p>Total Revenue for <%= @merchant.name %> after discounts: <%= @merchant.merchant_discounted_revenue(@invoice) %></p>
 
   <h4>Customer:</h4>
     <%= @customer.first_name %> <%= @customer.last_name %><br>
