--- a/app/views/bulk_discounts/index.html.erb
+++ b/app/views/bulk_discounts/index.html.erb
@@ -21,7 +21,9 @@
   </ul>
 </body>
 
-<h3>Upcoming Holidays</h3>
-<p><% @holidays.each do |holiday| %></p>
-  <%= holiday.name %>, <%= holiday.date %>
-<% end %>
+<div id = "upcoming_holidays">
+  <h3>Upcoming Holidays</h3>
+  <p><% @holidays.each do |holiday| %></p>
+    <%= holiday.name %>, <%= holiday.date %>
+  <% end %>
+</div>
